_sass/templates.app.scss
/* ... */
.tk-pasfoto__photo {
    margin-bottom: 2px;
}

.tk-pasfoto__description {
    @include font-style(14px, normal, 1.2);
    color: $ns-light-blue;
}



// banks
// --------------------------------------------
.tk-banks {
    display: grid;
    
    @include sm {
        grid-template-columns: repeat(2, 1fr);
        grid-gap: $half-gutter;
    }

    @include md {
        grid-template-columns: repeat(3, 1fr);
    }
}

.tk-banks__item {
    //layout
    overflow: hidden;
    display: grid;
    grid-template-columns: 36px 1fr max-content;
    grid-gap: 10px;
    margin-bottom: -1px;
    padding: 10px 20px 10px 10px;
    align-items: center;

    // styling
    border: 1px solid $ns-grey-7;
    cursor: pointer;
    transition: $fade-all;

    @include sm {
        margin: 0;
        border-radius: 4px;
    }

    svg {
        fill: $ns-blue;
    }
}

.tk-banks__title {
    color: $ns-blue;
}

.no-touch {
    .tk-banks__item:hover {
        box-shadow: 0 2px 28px rgba($ns-black, 0.1);
    }
}



// thanks
// --------------------------------------------
.tk-thanks__item {
    display: grid;
    grid-template-columns: max-content 1fr;
    grid-gap: 7px;
    margin-bottom: $gutter;
    @include font-style(16px, normal, 1.5);
    color: $ns-grey-4;

    b {
        color: $ns-blue;
    }

    a {
        @extend .tk-link;
    }

    svg {
        fill: $ns-blue;
        width: 48px;
    }

    @include sm {
        font-size: calculate-rem(18px);
        align-items: center;

        svg {
            width: 64px;
        }
    }
}



// add ons
// --------------------------------------------
.tk-add-on {
    display: grid;
    grid-template-columns: 1fr max-content;
    grid-gap: $gutter;
    align-items: center;
    margin-bottom: $one-half-gutter;
    border: 1px solid $ns-grey-7;
    padding: 20px;
    border-radius: 4px;
    transition: $fade-all;
    cursor: pointer;

    svg {
        fill: $ns-blue;
        transition: $fade-all;
    }

    &:hover {
        box-shadow: 0 2px 28px rgba($ns-black, 0.1);
    }

    @include xs {
        margin-bottom: $half-gutter;
    }

    @include sm {
        border-radius: 0;
    }
}

.tk-add-on__title {
    @include font-style(20px, bold, 1.25);
    margin-bottom: 4px;
}



// receipt
// --------------------------------------------
.tk-receipt {
    width: 100%;
    max-width: 350px;
    margin-left: auto;
}


// order for somebody else
// --------------------------------------------
.tk-other {
    padding: $half-gutter 0;
    border-top: 1px solid $ns-grey-7;
    border-bottom: 1px solid $ns-grey-7;
}

.tk-other__switch {
    display: grid;
    grid-template-columns: 1fr max-content;
    grid-gap: $half-gutter;
    align-items: center;
}

.tk-other__label {
    transition: $fade-link;
    color: $ns-grey;

    &.is-active {
        color: $ns-blue;
    }
}


// misc
// --------------------------------------------
.tk-customer {
    display: grid;
    @include xs {
        grid-template-columns: max-content 1fr;
        grid-column-gap: $gutter;
    }
}

.tk-ov-chip {
    letter-spacing: 2px;
    margin-right: 8px;

    @media(min-width: 400px) {
        letter-spacing: 4px;
        margin-right: 10px;
    }
}

.tk-ideal {
    display: grid;
    grid-template-columns: max-content 1fr;
    grid-column-gap: 10px;
    align-items: center;

    svg {
        height: 22px;
    }
}

.tk-ideal__img {
    position: relative;
    top: -1px;
    width: 24px;
}

.tk-loader {
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: calc(100vh - 60px);
    background-color: $ns-grey-8;

    svg {
        width: 33px;
        fill: $ns-blue;
        @extend .a-l;
        @extend .a-rotate;
    }
}

.tk-ul-small {
    padding-left: 24px;
    font-size: calculate-rem(14px);
    margin-bottom: 0;
}

.tk-li-small {
    margin-bottom: 0;
    padding-left: 2px;
    list-style-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='5' height='5' viewBox='0 0 5 5'%3E%3Cdefs%3E%3Cstyle%3E.a%7Bfill:%230079d3;%7D%3C/style%3E%3C/defs%3E%3Ctitle%3EAsset 1%3C/title%3E%3Crect class='a' width='5' height='5'/%3E%3C/svg%3E");
}

